<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="MC">MC</string>
    <string name="MR">MR</string>
    <string name="MS">MS</string>
    <string name="MPlus">M+</string>
    <string name="MMinus">M-</string>
    <string name="BackSpace">B</string>
    <string name="CE">CE</string>
    <string name="C">C</string>
    <string name="PlusMinus">+/-</string>
    <string name="Root">sq</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="Divide">/</string>
    <string name="Mod">%</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="Multiply">*</string>
    <string name="OneByX">1/x</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="Subtract">-</string>
    <string name="Equals">=</string>
    <string name="zero">0</string>
    <string name="decimal_separator">.</string>
    <string name="Add">+</string>
    
    

</resources>
